<resources>
<string name="app_name">Perfil</string>

<string name="action_settings">Settings</string>
    <string name="Login">Login ...</string>
    <string name="Senha">Senha ...</string>
    <string name="Entrar">ENTRAR</string>
    <string name="title_activity_cadastro">Cadastrar Novo Perfil </string>
    <string name="Nome">Nome</string>
    <string name="DataNascimento">Data de Nascimento</string>
    <string name="Descrição">Descrição Pessoal</string>
    <string name="Confirmar">CONFIRMAR</string>

</resources>
