<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginText"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:hint="@string/Login"
        android:layout_alignEnd="@+id/ConetadocheckBox"
        android:layout_alignStart="@+id/ConetadocheckBox" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/senhaText"
        android:layout_below="@+id/loginText"
        android:layout_marginTop="40dp"
        android:hint="@string/Senha"
        android:layout_alignEnd="@+id/ConetadocheckBox"
        android:layout_alignStart="@+id/loginText" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Continue Conectado"
        android:id="@+id/ConetadocheckBox"
        android:checked="false"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/entrarBtn"
        android:layout_below="@+id/ConetadocheckBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:hint="@string/Entrar"
        android:onClick="entrar"/>
</RelativeLayout>
