<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="imd.ufrn.br.perfil.CadastroActivity">

    <ImageButton
        android:layout_width="200px"
        android:layout_height="200px"
        android:id="@+id/FotoBtn"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nomeText"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/dataText"
        android:hint="@string/Nome"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/dataText"
        android:hint="@string/DataNascimento"
        android:layout_below="@+id/nomeText"
        android:layout_alignParentEnd="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/FotoBtn"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/FotoBtn"
        android:layout_alignStart="@+id/dataText">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Masculino"
            android:id="@+id/radioButtonMarculino"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Feminino"
            android:id="@+id/radioButtonFeminino"
            android:layout_below="@+id/radioGroup"
            android:layout_alignParentStart="true"
            android:checked="false" />

    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/DescicaoText"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/Descrição"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ConfirmarBtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:hint="@string/Confirmar"
        android:onClick="Confirmar"/>


</RelativeLayout>
